# UChicagoMWTC2019

./: environment.yml  readme.md
Case3/: CVXOPT.ipynb  README.md  Still.todo
case1/: case1.py  case_1.py  case_1_strat.py
case1/Data_Exploration/: DataExploration.ipynb  data_scrapper.py
case1/Data_Exploration/pickled_arrays/: k_array.pkl  m_array.pkl  n_array.pkl  q_array.pkl  u_array.pkl  v_array.pkl
case1/Running_env/: case_1.py  case_one_bot (1).tar  exchange.tar  requirements.txt  server.par
case1/Running_env/case1_setter/: case_one_bot.par  price_setter_config.json
case1/Running_env/client/exchange_service/: client.py
case1/Running_env/pickled_arrays/: k_array.pkl  m_array.pkl  n_array.pkl  q_array.pkl  u_array.pkl  v_array.pkl
case1/Running_env/protos/: competitor.proto  exchange.proto  order_book.proto
case1/Running_env/server/continuous_exchange/: exchangeconfig.textproto
case2/: CMakeLists.txt  MarketMaker.h  Portfolio.h  black_scholes.cpp  black_scholes.h  kvt.cpp  maker.py
case2/client/exchange_service/: client.py
case2/lets-be-rational/: LetsBeRational_wrap.c
case2/protos/: competitor_pb2.py  exchange_pb2.py  order_book_pb2.py  service.proto  service_pb2.py  service_pb2_grpc.py  websocket.proto
case2/server/continuous_exchange/: exchangeconfig.textproto
case3/: CVXOPT.ipynb  Case3-Forecasting.ipynb  FinalV1.ipynb  covCor.py  strategy.py  test.py
case3/strategy_creation/: CVXOPT.py
